--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,11 +96,11 @@ h6 {
 
 .default-btn {
     display: inline-block;
-    border: 1px solid #f53f85;
+    border: 1px solid #F9A71C;
     padding: 10px 30px;
     transition: .5s;
     text-transform: uppercase;
-    background-color: #f53f85;
+    background-color: #F9A71C;
     color: #fff;
     font-size: 14px;
     font-weight: 600
@@ -663,7 +663,7 @@ textarea.form-control {
 .xton-nav .navbar .navbar-nav .nav-item a:hover,
 .xton-nav .navbar .navbar-nav .nav-item a:focus,
 .xton-nav .navbar .navbar-nav .nav-item a.active {
-    color: #f53f85
+    color: #F9A71C
 }
 
 .xton-nav .navbar .navbar-nav .nav-item:last-child a {
@@ -676,7 +676,7 @@ textarea.form-control {
 
 .xton-nav .navbar .navbar-nav .nav-item:hover a,
 .xton-nav .navbar .navbar-nav .nav-item.active a {
-    color: #f53f85
+    color: #F9A71C
 }
 
 .xton-nav .navbar .navbar-nav .nav-item .dropdown-menu {
